# vk-ext-mesh-shader-example

./: .gitignore  Cargo.toml  README.md
shaders/: compile-shaders.bat  example.frag.glsl  example.mesh.glsl  geometry.mesh.glsl  geometry_tri.frag.glsl  geometry_tri.mesh.glsl  instance_cull.comp.glsl  types.glsl  utils.glsl
src/: main.rs  mesh_builder.rs
src/render/: buffer.rs  frame.rs  mesh.rs  mesh_util.rs  mod.rs  query_pool.rs  render_ctx.rs  renderer.rs  util.rs
src/render/passes/: geometry.rs  instance_cull.rs  mod.rs
src/render/utils/: globals.rs  mod.rs  pipelines.rs
