[package]
name = "vk-ext-mesh-shader-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.63"
ash = { git = "https://github.com/projectkml/ash", branch = "ext-mesh-shader" }
ash-window = { git = "https://github.com/projectkml/ash", branch = "ext-mesh-shader" }
bytemuck = "1.12.1"
dolly = "0.3.1"
fast-obj = { git = "https://github.com/projectkml/fast-obj-rs" }
glam = "0.21.3"
libc = "0.2.132"
meshopt = { git = "https://github.com/projectkml/meshopt-rs" }
vk-mem-alloc = { git = "https://github.com/projectkml/vk-mem-alloc-rs" }
winit = "0.27.2"