[package]
name = "vk-ext-mesh-shader-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
ash = { git = "https://github.com/projectkml/ash" }
ash-window = { git = "https://github.com/projectkml/ash" }
bytemuck = { version = "1.12.1", features = ["derive"] }
bitstream-io = "1.6.0"
dolly = "0.4.0"
fast-obj = { git = "https://github.com/projectkml/fast-obj-rs" }
glam = { version = "0.24.1", features = ["bytemuck"] }
libc = "0.2.135"
meshopt = { git = "https://github.com/projectkml/meshopt-rs" }
rand = "0.8.5"
raw-window-handle = "0.5.0"
shaderc = { git = "https://github.com/ProjectKML/shaderc-rs" }
vk-mem-alloc = { git = "https://github.com/projectkml/vk-mem-alloc-rs" }
winit = "0.27.4"
