[package]
name = "vk-ext-mesh-shader-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.63"
ash = { git = "https://github.com/projectkml/ash" }
ash-window = { git = "https://github.com/projectkml/ash" }
bytemuck = "1.12.1"
dolly = "0.4.1"
fast-obj = { git = "https://github.com/projectkml/fast-obj-rs" }
glam = "0.24.2"
libc = "0.2.132"
meshopt = { git = "https://github.com/projectkml/meshopt-rs" }
raw-window-handle = "0.5.0"
shaderc = "0.8.2"
vk-mem-alloc = { git = "https://github.com/projectkml/vk-mem-alloc-rs" }
winit = "0.28.2"